--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "bootstrap": "^5.3.8",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
