--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,21 @@
+alembic==1.16.5
 blinker==1.9.0
+cffi==2.0.0
 click==8.2.1
 colorama==0.4.6
+cryptography==45.0.7
+dotenv==0.9.9
 Flask==3.1.2
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jwt==1.4.0
+Mako==1.3.10
 MarkupSafe==3.0.2
+pycparser==2.23
+python-dotenv==1.1.1
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
