--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,39 @@
 alembic==1.16.5
+attrs==25.3.0
+bidict==0.23.1
 blinker==1.9.0
 cffi==2.0.0
 click==8.2.1
 colorama==0.4.6
 cryptography==45.0.7
 dotenv==0.9.9
+flasgger==0.9.7.1
 Flask==3.1.2
 Flask-Migrate==4.1.0
+Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
+h11==0.16.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 jwt==1.4.0
 Mako==1.3.10
 MarkupSafe==3.0.2
+mistune==3.1.4
+packaging==25.0
+psycopg2-binary==2.9.10
 pycparser==2.23
 python-dotenv==1.1.1
+python-engineio==4.12.2
+python-socketio==5.13.0
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.27.1
+simple-websocket==1.1.0
+six==1.17.0
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
+wsproto==1.2.0
