--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.16.5
 attrs==25.3.0
 bidict==0.23.1
 blinker==1.9.0
+certifi==2025.8.3
 cffi==2.0.0
+charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 cryptography==45.0.7
@@ -14,6 +16,7 @@ Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
 h11==0.16.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.25.1
@@ -30,10 +33,12 @@ python-engineio==4.12.2
 python-socketio==5.13.0
 PyYAML==6.0.2
 referencing==0.36.2
+requests==2.32.5
 rpds-py==0.27.1
 simple-websocket==1.1.0
 six==1.17.0
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
+urllib3==2.5.0
 Werkzeug==3.1.3
 wsproto==1.2.0
