--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,13 +21,13 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-jwt==1.4.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 mistune==3.1.4
 packaging==25.0
 psycopg2-binary==2.9.10
 pycparser==2.23
+PyJWT==2.10.1
 python-dotenv==1.1.1
 python-engineio==4.12.2
 python-socketio==5.13.0
