--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ cryptography==45.0.7
 dotenv==0.9.9
 flasgger==0.9.7.1
 Flask==3.1.2
+flask-cors==6.0.1
 Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
