--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.16.5
 attrs==25.3.0
+bcrypt==4.3.0
 bidict==0.23.1
 blinker==1.9.0
 certifi==2025.8.3
@@ -11,12 +12,13 @@ cryptography==45.0.7
 dotenv==0.9.9
 flasgger==0.9.7.1
 Flask==3.1.2
+Flask-Bcrypt==1.0.1
 flask-cors==6.0.1
 Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
-gunicorn
+gunicorn==23.0.0
 h11==0.16.0
 idna==3.10
 itsdangerous==2.2.0
